fix problem, marge Elena, Sergey 3